--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ Project/AutoClick/Log/log*.txt
 Project/AutoClick/Sources/Views/pdf_files/*.pdf
 Project/AutoClick/Test/*.png
 Project/Test/*.png
+Project/AutoClick/Sources/Views/dist/*.notanexecutable
