--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ Project/AutoClick/Sources/old/
 Project/AutoClick/Sources/Test/Kivy_paint_expansion-master/
 Project/AutoClick/Sources/Test/Kivy_paint_expansion-master/*.kv
 Project/AutoClick/Images/image_information/*.png
+Project/AutoClick/Log/houchi.json
+Project/AutoClick/Log/mementomori.json
