--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,16 @@ Project/AutoClick/Sources/Test/Kivy_paint_expansion-master/*.kv
 Project/AutoClick/Images/image_information/*.png
 Project/AutoClick/Log/houchi.json
 Project/AutoClick/Log/mementomori.json
+Project/AutoClick/Sources/Models/tmp/pre_status0.png
+Project/AutoClick/Sources/Models/tmp/pre_status1.png
+Project/AutoClick/Sources/Models/tmp/pre_status2.png
+Project/AutoClick/Sources/Models/tmp/pre_status3.png
+Project/AutoClick/Sources/Models/tmp/screen_1.png
+Project/AutoClick/Sources/Models/tmp/status0.png
+Project/AutoClick/Sources/Models/tmp/status1.png
+Project/AutoClick/Sources/Models/tmp/status2.png
+Project/AutoClick/Sources/Models/tmp/status3.png
+Project/AutoClick/Test/works.png
+Project/AutoClick/Test/stamp.png
+Project/AutoClick/Log/test_auto.json
+Project/AutoClick/desktop.ini
