Task→Plan→Actionの実行まで動作。 TaskがInformationにResultを保存する作りまで作成。

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ Project/AutoClick/Test/works.png
 Project/AutoClick/Test/stamp.png
 Project/AutoClick/Log/test_auto.json
 Project/AutoClick/desktop.ini
+*コピー.*
+Project/AutoClick/Sources/Models/*級*.bat
