File名周りの整理

--- a/.gitignore
+++ b/.gitignore
@@ -31,26 +31,34 @@ Test/*.zip
 # Built Visual Studio Code Extensions
 *.vsix
 
-houchi_auto_ikusei/tmp/*.png
-Project/AutoClick/Images/Test/*.png
-Project/AutoClick/Log/log*.txt
-Project/AutoClick/Sources/Views/pdf_files/*.pdf
-Project/AutoClick/Test/*.png
+*コピー.*
+
+*.pyc
 Project/Test/*.png
+
+houchi_auto_ikusei/tmp/*.png
+Project/AutoClick/desktop.ini
+Project/AutoClick/Images/image_information/*.png
+Project/AutoClick/Images/Test/*.png
+Project/AutoClick/Log/houchi.json
+Project/AutoClick/Log/mementomori.json
+Project/AutoClick/Log/log*.txt
+Project/AutoClick/Log/test_auto.json
+Project/AutoClick/Test/*.png
+Project/AutoClick/Test/works.png
+Project/AutoClick/Test/stamp.png
+Project/AutoClick/Sources/Views/pdf_files/*.pdf
 Project/AutoClick/Sources/Views/dist/*.notanexecutable
-Project/AutoClick/Sources/*.json
+Project/AutoClick/Sources/*Test*.json
 Project/AutoClick/Sources/*.xml
 Project/AutoClick/Sources/__pycache__/
 Project/AutoClick/Sources/Common/__pycache__/
 Project/AutoClick/Sources/Test/*.png
 Project/AutoClick/Sources/Test/Kivy_paint_expansion-master/*.png
-*.pyc
+
 Project/AutoClick/Sources/old/
 Project/AutoClick/Sources/Test/Kivy_paint_expansion-master/
 Project/AutoClick/Sources/Test/Kivy_paint_expansion-master/*.kv
-Project/AutoClick/Images/image_information/*.png
-Project/AutoClick/Log/houchi.json
-Project/AutoClick/Log/mementomori.json
 Project/AutoClick/Sources/Models/tmp/pre_status0.png
 Project/AutoClick/Sources/Models/tmp/pre_status1.png
 Project/AutoClick/Sources/Models/tmp/pre_status2.png
@@ -60,9 +68,6 @@ Project/AutoClick/Sources/Models/tmp/status0.png
 Project/AutoClick/Sources/Models/tmp/status1.png
 Project/AutoClick/Sources/Models/tmp/status2.png
 Project/AutoClick/Sources/Models/tmp/status3.png
-Project/AutoClick/Test/works.png
-Project/AutoClick/Test/stamp.png
-Project/AutoClick/Log/test_auto.json
-Project/AutoClick/desktop.ini
-*コピー.*
 Project/AutoClick/Sources/Models/*級*.bat
+Project/AutoClick/Sources/Models/*_backup.py
+Project/AutoClick/Sources/Models/*_old.py
