--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Project/AutoClick/Sources/Models/*_old.py
 Project/AutoClick/Images/image**/**.png
 Project/AutoClick/Log/log_*.json
 Project/AutoClick/Images/mementomori/*.png
+Project/AutoClick/Images/*.png
