・Source File名を先頭大文字に変更 ・外部プログラムの起動機能を草案し実装

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ Project/AutoClick/Images/image**/**.png
 Project/AutoClick/Log/log_*.json
 Project/AutoClick/Images/mementomori/*.png
 Project/AutoClick/Images/*.png
+Project/AutoClick/Sources/Common/test/Image*.png
+Project/AutoClick/Log/log.json
+Project/AutoClick/Log/log*.json
