--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ Project/AutoClick/Images/*.png
 Project/AutoClick/Sources/Common/test/Image*.png
 Project/AutoClick/Log/log.json
 Project/AutoClick/Log/log*.json
+Project/AutoClick/Images/*
