・Information,PlanListのCopy機能、Settingsの変更機能を搭載。 ・SettingsをCopy機能に対応開始。 ・SettingとSettingsの記述を明確に。 ・画像認識に開始前Retry時間を追加。 ・Action、Taskの他のプログラム呼び出し部をDictionaryでの呼び出しに変更。 ・Settingsの設定名から固有名詞をなくす方針に変更。ファイル名や指定先のフォルダ名のみに固有名詞はとどめる。

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@ Project/AutoClick/Log/log.json
 Project/AutoClick/Log/log*.json
 Project/AutoClick/Images/*
 Project/AutoClick/Log/*.log
+Project/AutoClick/Sources/Common/Recognition_old.py
+Project/AutoClick/Sources/.vscode/launch.json
+Project/AutoClick/Sources/Common/Recognition_old.py
+Project/AutoClick/Sources/Common/Recognition_old.py
