--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,5 @@ Project/AutoClick/Images/*
 Project/AutoClick/Log/*.log
 Project/AutoClick/Sources/Common/Recognition_old.py
 Project/AutoClick/Sources/.vscode/launch.json
+build/temp.linux-x86_64-cpython-311/test.o
+test.cpython-311-x86_64-linux-gnu.so
